2014-05-24: Ver. 0.1-3
  * Migration to MS-MPI.

2014-02-14: Ver. 0.1-3
  * Export vobjtovarid4.
  * Move non-standar files/directories to inst/ and inst/org/

2013-07-30: ver. 0.1-2
  * Add man page.

2013-07-02: ver. 0.1-1
  * Test on newer HDF5 and NetCDF4 libraries added to the vignette.
  * Citation typo fixed.
  * Edit vignettes.
  * Move vignettes to vignettes/.

2013-02-20: ver. 0.1-0
  * Fix bugs in "configure.in" and "src/Makevar.in".
  * Test read and write for both serial and parallel.
  * Add file format checking to avoid crash.

======================= Log Before Release =====================================
2012-12-26:
  * Bugs free by Pragneshkumar Patel and Wei-Chen Chen.
  * First package initialized.
  * Add man pages for new parallel functions.
  * Modify "configure.in".
  * Change PACKAGE="ncdf4" to PACKAGE="pbdNCDF4" in all R code.
  * Change "\link[ncdf4]" to "\link[pbdNCDF4]" in all man page.
  * Migrate to ncdf4_1.8.tar.gz
  * Fix multi-arch problem.
  * Add copyright to vignette.
  * Fix .Last.lib problem.

2011-10-*:
  * First initialized by George Ostrouchov.
