@@ -1,6 +1,6 @@
 Package: pbdNCDF4
 Version: 0.1-3
-Date: 2014-05-24
+Date: 2014-06-01
 Title: Programming with Big Data -- Interface to Parallel Unidata
         NetCDF4 Format Data Files
 Authors@R: c(person("Pragneshkumar", "Patel", role = c("aut", "cre"), email =
@@ -9,10 +9,9 @@ Authors@R: c(person("Pragneshkumar", "Patel", role = c("aut", "cre"), email =
         person("Wei-Chen", "Chen", role = "aut"),
         person("Drew", "Schmidt", role = "aut"),
         person("David", "Pierce", role = "aut"))
-Depends: R (>= 2.14.0), methods, rlecuyer, pbdMPI (>= 0.1-6)
+Depends: R (>= 3.0.0), methods, rlecuyer, pbdMPI (>= 0.2-4)
 LazyLoad: yes
 LazyData: yes
-OS_type: unix
 Description: This package adds collective parallel read and write capability
              to the R package ncdf4 version 1.8. Typical use is as a
              parallel NetCDF4 file reader in SPMD style programming. Each R
@@ -20,16 +19,10 @@ Description: This package adds collective parallel read and write capability
              collective mode, resulting in faster parallel performance.
              Performance improvement is conditional on a parallel file system.
 SystemRequirements: OpenMPI (>= 1.5.4) on Solaris, Linux and Mac.
-        Parallel HDF5 and NetCDF4 (4.1 or later) libraries.
+        (Parallel) HDF5 and NetCDF4 (4.1 or later) libraries.
+        No MPI library required on Windows yet.
 License: GPL (>= 3)
 URL: http://r-pbd.org/
 BugReports: http://group.r-pbd.org/
 MailingList: Please send questions and comments regarding pbdR to
         RBigData@gmail.com
-Packaged: 2014-02-15 20:08:18 UTC; snoweye
-Author: Pragneshkumar Patel [aut, cre],
-  George Ostrouchov [aut],
-  Wei-Chen Chen [aut],
-  Drew Schmidt [aut],
-  David Pierce [aut]
-Maintainer: Pragneshkumar Patel <pragnesh@utk.edu>
