@@ -1,0 +1,12 @@
+SPMD_CPPFLAGS = @SPMD_CPPFLAGS@
+SPMD_LDFLAGS = @SPMD_LDFLAGS@
+NETCDF_HEADER = @NETCDF_HEADER@
+NETCDF_INCLUDE = @NETCDF_INCLUDE@
+NETCDF_PAR = @NETCDF_PAR@
+NETCDF_PAR_OBJS = @NETCDF_PAR_OBJS@
+NETCDF_CPPFLAGS = @NETCDF_CPPFLAGS@ -DNETCDF_INCLUDE=@NETCDF_INCLUDE@
+NETCDF_LDFLAGS = @NETCDF_LDFLAGS@
+NETCDF_RPATH = @NETCDF_RPATH@
+HAVE_NETCDF = @HAVE_NETCDF@
+PKG_CPPFLAGS = @NETCDF_CPPFLAGS@ -DNETCDF_INCLUDE=@NETCDF_INCLUDE@ @SPMD_CPPFLAGS@
+PKG_LIBS = @NETCDF_LDFLAGS@ @SPMD_LDFLAGS@
