@@ -3,16 +3,16 @@
 \title{Switch between collective and individual parallel access}
 \description{
   Switches between the default individual access and collective access for a
-  variable in a file that was opened with \code{\link[pbdNCDF4]{nc_open_par}} or
-  \code{\link[pbdNCDF4]{nc_create_par}}.
+  variable in a file that was opened with \code{nc_open_par} or
+  \code{nc_create_par}.
 }
 \usage{
   nc_var_par_access(nc, var, collective = TRUE, verbose = FALSE)
 }
 \arguments{
   \item{nc}{An object of class \code{ncdf4} (as returned by either function
-            \code{\link[pbdNCDF4]{nc_open_par}} or function
-            \code{\link[pbdNCDF4]{nc_create_par}}),
+            \code{nc_open_par} or function
+            \code{nc_create_par}),
             indicating what file to read from.}
  \item{var}{Variable name or id.}
  \item{collective}{use collective method to read and write.}
@@ -35,7 +35,7 @@
   Wei-Chen Chen, and Drew Schmidt.
 }
 \seealso{ 
-  \code{\link[pbdNCDF4]{nc_open_par}}, \code{\link[pbdNCDF4]{nc_create_par}},
+  \code{nc_open_par}, \code{nc_create_par},
   \code{\link[pbdNCDF4]{ncdim_def}}, \code{\link[pbdNCDF4]{ncvar_def}}. 
 }
 \examples{
