@@ -64,7 +64,7 @@
 
  After a variable is defined with this call, and created on disk using
  \code{\link[pbdNCDF4]{nc_create}}, then data values for the variable can be written
- to disk using \code{\link[pbdNCDF4]{ncvar_put}}.
+ to disk using \code{ncvar_put}.
 
  This function returns a \code{ncvar} object, which describes the newly-created
  variable.  However, the \code{ncvar} object is used for more than just
@@ -97,7 +97,7 @@
 \author{David W. Pierce \email{dpierce@ucsd.edu}}
 \seealso{ 
  \code{\link[pbdNCDF4]{ncdim_def}}, \code{\link[pbdNCDF4]{nc_create}}, 
- \code{\link[pbdNCDF4]{ncvar_put}}.
+ \code{ncvar_put}.
 }
 \examples{
 # Define an integer dimension 
