@@ -1,5 +1,6 @@
 2014-05-24: Ver. 0.1-3
   * Migration to MS-MPI.
+  * Add Windows NetCDF4 support in serial.
 
 2014-02-14: Ver. 0.1-3
   * Export vobjtovarid4.
